syntax = "proto3";
package fetchbox.jobs;

message HttpHeader {
  string name = 1;
  string value = 2;
}

message StorageHint {
  string bucket = 1;
  string key_prefix = 2;
  map<string, string> metadata = 3;
}

message ProxyHint {
  string primary_pool = 1;
  repeated string fallbacks = 2;
}

message TaskAttributes {
  map<string, string> tags = 1;
  string checksum_hint = 2;
  string mime_hint = 3;
  bytes extra = 4; // optional serialized blob
}

message DownloadTask {
  string job_id = 1;
  string job_type = 2;
  string resource_id = 3;
  string url = 4;
  repeated HttpHeader headers = 5;
  optional ProxyHint proxy_hint = 6;
  optional StorageHint storage_hint = 7;
  TaskAttributes attributes = 8;
  string manifest_key = 9;
  uint32 attempt = 10;
  string tenant = 11;
  string trace_id = 12;
}

enum JobState {
  JOB_STATE_UNKNOWN = 0;
  JOB_STATE_QUEUED = 1;
  JOB_STATE_IN_PROGRESS = 2;
  JOB_STATE_PARTIAL = 3;
  JOB_STATE_COMPLETED = 4;
  JOB_STATE_FAILED = 5;
}

message JobStatus {
  string job_id = 1;
  string job_type = 2;
  JobState state = 3;
  uint32 resources_total = 4;
  uint32 resources_completed = 5;
  uint32 resources_failed = 6;
  string manifest_key = 7;
  string tenant = 8;
  string last_error_code = 9;
  string last_error_message = 10;
  uint64 log_offset = 11;
  uint64 timestamp_ms = 12;
}

enum LogLevel {
  LOG_LEVEL_TRACE = 0;
  LOG_LEVEL_DEBUG = 1;
  LOG_LEVEL_INFO = 2;
  LOG_LEVEL_WARN = 3;
  LOG_LEVEL_ERROR = 4;
}

message JobLog {
  string job_id = 1;
  string resource_id = 2;
  LogLevel level = 3;
  string message = 4;
  map<string, string> fields = 5;
  uint64 timestamp_ms = 6;
  string trace_id = 7;
}

message DeadLetterTask {
  DownloadTask task = 1;
  string failure_code = 2;
  string failure_message = 3;
  uint32 attempts = 4;
  uint64 failed_at_ms = 5;
}
